Fix text align

--- a/css/alina.css
+++ b/css/alina.css
@@ -32,6 +32,7 @@ body {
 h1 {
   font-family: 'Dancing Fool';
   font-size: 12vh;
+  text-align: center;
 }
 
 p {
